longhorn/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-manager
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app: longhorn-manager
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/version: v1.4.1
    spec:
      containers:
        - command:
            - longhorn-manager
            - -d
            - daemon
            - --engine-image
            - longhornio/longhorn-engine:v1.4.1
            - --instance-manager-image
            - longhornio/longhorn-instance-manager:v1.4.1
            - --share-manager-image
            - longhornio/longhorn-share-manager:v1.4.1
            - --backing-image-manager-image
            - longhornio/backing-image-manager:v1.4.1
            - --support-bundle-manager-image
            - longhornio/support-bundle-kit:v0.0.19
            - --manager-image
            - longhornio/longhorn-manager:v1.4.1
            - --service-account
            - longhorn-service-account
          image: longhornio/longhorn-manager:v1.4.1
          imagePullPolicy: IfNotPresent
          name: longhorn-manager
          ports:
            - containerPort: 9500
              name: manager
          readinessProbe:
            tcpSocket:
              port: 9500
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /host/dev/
              name: dev
            - mountPath: /host/proc/
              name: proc
            - mountPath: /var/lib/longhorn/
              mountPropagation: Bidirectional
              name: longhorn
            - mountPath: /tls-files/
              name: longhorn-grpc-tls
      serviceAccountName: longhorn-service-account
      volumes:
        - hostPath:
            path: /dev/
          name: dev
        - hostPath:
            path: /proc/
          name: proc
        - hostPath:
            path: /var/lib/longhorn/
          name: longhorn
        - name: longhorn-grpc-tls
          secret:
            optional: true
            secretName: longhorn-grpc-tls
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 100%
