longhorn/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-backend
  namespace: longhorn-system
spec:
  ports:
    - name: manager
      port: 9500
      targetPort: manager
  selector:
    app: longhorn-manager
  sessionAffinity: ClientIP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.236
  labels:
    app: longhorn-ui
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  ports:
    - name: http
      nodePort: null
      port: 80
      targetPort: http
  selector:
    app: longhorn-ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-conversion-webhook
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-conversion-webhook
  namespace: longhorn-system
spec:
  ports:
    - name: conversion-webhook
      port: 9443
      targetPort: conversion-wh
  selector:
    app: longhorn-conversion-webhook
  sessionAffinity: ClientIP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-admission-webhook
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-admission-webhook
  namespace: longhorn-system
spec:
  ports:
    - name: admission-webhook
      port: 9443
      targetPort: admission-wh
  selector:
    app: longhorn-admission-webhook
  sessionAffinity: ClientIP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-recovery-backend
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-recovery-backend
  namespace: longhorn-system
spec:
  ports:
    - name: recovery-backend
      port: 9600
      targetPort: recov-backend
  selector:
    app: longhorn-recovery-backend
  sessionAffinity: ClientIP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-engine-manager
  namespace: longhorn-system
spec:
  clusterIP: None
  selector:
    longhorn.io/component: instance-manager
    longhorn.io/instance-manager-type: engine
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.4.1
  name: longhorn-replica-manager
  namespace: longhorn-system
spec:
  clusterIP: None
  selector:
    longhorn.io/component: instance-manager
    longhorn.io/instance-manager-type: replica
