longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/secure-backends: "true"
  labels:
    app: longhorn-ingress
  name: longhorn
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn.int.kyledev.co
      secretName: longhorn-kyledev-tls-prod
